--- a/_includes/contribute.html
+++ b/_includes/contribute.html
@@ -4,7 +4,7 @@
   title="No resources yet"
   content="Unfortunately resources for this topic have not been created yet.
 
-  Interested in helping out? Please get in touch with us at [oer@farm.bot](mailto:oer@farm.bot) to contribute lesson plans, worksheets, slides, and more.
+  Interested in helping out? Please get in touch with us at [contact@farm.bot](mailto:contact@farm.bot) to contribute lesson plans, worksheets, slides, and more.
 
   Contributions may be rewardable with [FarmBot shop](http://shop.farm.bot/) store credit or further discounts on FarmBot kits for your school."
 %}
